Change: added second delailed chart and impressum

--- a/src/components/slide-impressum/slide-impressum.sass
+++ b/src/components/slide-impressum/slide-impressum.sass
@@ -1,6 +1,6 @@
 .impressum-wrapper
     display: flex
-    align-items: center
+    align-items: left
     justify-content: space-between
     flex-direction: column
     height: 100%
@@ -9,4 +9,4 @@
 
 .block
     text-align: justify
-    max-width: 60%
+    max-width: 80%
